debug: make kg run